fix - homepage on mobile view

--- a/src/components/Achieves/index.sass
+++ b/src/components/Achieves/index.sass
@@ -1,12 +1,13 @@
 .achieves
   padding: 50px 30px
   background-color: #f8f8f8
-  margin-bottom: 100px
+  margin-bottom: 50px
 
   &__main-content
     padding-top: 50px
     display: grid
     grid-template: repeat(2, auto) / repeat(2, auto)
+    grid-row-gap: 20px
 
   &__item-flex
     flex: 1
