--- a/src/components/Explore/index.sass
+++ b/src/components/Explore/index.sass
@@ -41,6 +41,7 @@
 
     > div
       padding-top: 50px
+      padding-bottom: 50px
 
     &__image-wrapper
       padding: 0 50px 0
