--- a/src/components/Footer/index.sass
+++ b/src/components/Footer/index.sass
@@ -56,9 +56,9 @@
     &__logo-wrapper
       text-align: left
 
-    &__flex-container
+    &__grid-container
       display: grid
-      grid-template-columns: repeat(3, auto)
+      grid-template-columns: repeat(4, auto)
       text-align: left
       justify-content: space-between
 
@@ -78,7 +78,7 @@
       display: flex
       justify-content: flex-start
 
-    &__flex-container
+    &__grid-container
       flex: 2
       display: flex
       justify-content: flex-end
