--- a/src/components/Introduction/index.sass
+++ b/src/components/Introduction/index.sass
@@ -1,7 +1,7 @@
 @import '../../styles/variables.sass'
 
 .introduction
-  padding: 100px 0
+  padding: 50px 0
   text-align: left
 
   &__title
