--- a/src/components/Partners/index.sass
+++ b/src/components/Partners/index.sass
@@ -1,8 +1,8 @@
 .partners
-  padding: 50px 20px
+  padding: 0 30px 50px 20px
 
   &__title
-    padding-bottom: 50px
+    padding-bottom: 50px !important
     text-align: center
 
   img
