--- a/src/components/Technologies/index.sass
+++ b/src/components/Technologies/index.sass
@@ -10,7 +10,7 @@
     color: $white
     letter-spacing: 0.5px
     display: block
-    color: $fogGray
+    color: $white
 
   &__title
     color: #ffffff !important
